<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/shadow_container"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:background="@android:color/transparent"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvChoose1"
            android:textSize="@dimen/_15sdp"
            android:gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@font/nunitosans_bold"
            android:text="@string/add_holiday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvChoose"
            android:layout_below="@+id/tvChoose1"
            android:textSize="@dimen/_12sdp"
            android:gravity="center"
            android:text="@string/choose_holiday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <androidx.cardview.widget.CardView
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_below="@+id/tvChoose"
            android:background="@drawable/shadow_container"
            app:cardBackgroundColor="@android:color/transparent"
            android:id="@+id/lvMain"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardUseCompatPadding="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout

                android:padding="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_margin="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:text="@string/office_staff"
                    android:id="@+id/offStaff"
                    android:gravity="center"
                    android:fontFamily="@font/nunitosans_bold"
                    android:textSize="@dimen/_16sdp"
                    android:textColor="@color/blue_600"
                    android:layout_gravity="center"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="wrap_content"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:background="@color/divider_color"
                    android:id="@+id/divider"/>


                <TextView
                    android:text="@string/shift_staff"
                    android:id="@+id/tvShiftStaff"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center"
                    android:textColor="@color/blue_600"
                    android:fontFamily="@font/nunitosans_bold"
                    android:textSize="@dimen/_16sdp"
                    android:layout_gravity="center"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="wrap_content"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:background="@color/divider_color"
                    android:id="@+id/dividers"/>


                <TextView
                    android:text="@string/both"
                    android:id="@+id/tvBoth"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center"
                    android:textColor="@color/blue_600"
                    android:fontFamily="@font/nunitosans_bold"
                    android:textSize="@dimen/_16sdp"
                    android:layout_gravity="center"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <Button
            android:textSize="@dimen/_15sdp"
            android:text="Cancel"
            android:id="@+id/btnCancel"
            android:layout_margin="@dimen/_10sdp"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/white"
            android:layout_below="@+id/lvMain"
            android:background="@drawable/buttonshape"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
</LinearLayout>