<?xml version="1.0" encoding="utf-8"?>
<layout>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="false"
    android:focusableInTouchMode="true"
    tools:context=".activity.ApplyLeaveActivity">

    <include
        android:id="@+id/lltoolbar"
        layout="@layout/app_toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lltoolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp">

            <RadioGroup
                android:id="@+id/rgbDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rbFullDay"
                    style="@style/fontbold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorPrimaryDark"
                    android:text="@string/lbl_full_day"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10ssp" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rbHalfDay"
                    style="@style/fontbold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10ssp"
                    android:buttonTint="@color/colorPrimaryDark"
                    android:text="@string/lbl_half_day"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10ssp" />
            </RadioGroup>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"
                app:layout_constraintTop_toBottomOf="@id/rgbDay">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvlblFromDate"
                    style="@style/boldLblStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_from_date"

                    app:layout_constraintEnd_toStartOf="@id/tvlblToDate"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvlblToDate"
                    style="@style/boldLblStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_7sdp"
                    android:text="@string/lbl_to_date"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tvlblFromDate"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvFromDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/gray_rounded_rectangle"
                    android:drawableEnd="@drawable/ic_calander"
                    android:hint="@string/lbl_from_date"
                    android:padding="@dimen/_5sdp"
                    android:textColorHint="@color/font_lbl_gray"
                    app:layout_constraintEnd_toEndOf="@id/tvlblFromDate"
                    app:layout_constraintStart_toStartOf="@id/tvlblFromDate"
                    app:layout_constraintTop_toBottomOf="@id/tvlblFromDate" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvToDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/gray_rounded_rectangle"
                    android:drawableEnd="@drawable/ic_calander"
                    android:hint="@string/lbl_to_date"
                    android:padding="@dimen/_5sdp"
                    android:textColorHint="@color/font_lbl_gray"
                    app:layout_constraintEnd_toEndOf="@id/tvlblToDate"
                    app:layout_constraintStart_toStartOf="@id/tvlblToDate"
                    app:layout_constraintTop_toBottomOf="@id/tvlblToDate" />

                <include
                    android:id="@+id/llReasonForLeave"
                    layout="@layout/my_spinner_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    app:layout_constraintTop_toBottomOf="@id/tvFromDate" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvLblRequestDetails"
                    style="@style/boldLblStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/lbl_request_details"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/llReasonForLeave" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtRequestDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/gray_rounded_rectangle"
                    android:gravity="top|left"
                    android:hint="@string/lbl_describe_reason_for_leave"
                    android:lines="4"
                    android:padding="@dimen/_5sdp"
                    android:textColorHint="@color/font_lbl_gray"
                    android:textSize="@dimen/_11ssp"
                    app:layout_constraintTop_toBottomOf="@id/tvLblRequestDetails" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSubmit"
                    style="@style/fontbold"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/bg_button"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:text="@string/lbl_submit"
                    android:textAllCaps="false"
                    android:textColor="@color/color_white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edtRequestDetails" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvLeaveStaus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:text="@string/lbl_leaves_status"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimaryDark"
                    app:layout_constraintBottom_toBottomOf="@id/btnSubmit"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edtRequestDetails" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="@dimen/_5sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/clDetails">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingStart="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_10sdp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvLblLeaveDetails"
                        style="@style/boldLblStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_leaves_request_status"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvLeave"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        tools:listitem="@layout/row_leave_request"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintTop_toBottomOf="@id/tvLblLeaveDetails" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>